[gd_scene load_steps=4 format=3 uid="uid://bjog0uuedcnjh"]

[ext_resource type="Texture2D" uid="uid://bllhrqkhaedsl" path="res://sprites/s1-sprite.png" id="1_7hotv"]
[ext_resource type="Script" path="res://scenes/block.gd" id="1_r1rpr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1vpvx"]
size = Vector2(191, 130)

[node name="S1 Block" type="Node2D"]

[node name="block" type="Node2D" parent="."]
script = ExtResource("1_r1rpr")

[node name="Hitbox" type="Area2D" parent="block"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="block/Hitbox"]
position = Vector2(0.499939, -3.05176e-05)
shape = SubResource("RectangleShape2D_1vpvx")

[node name="Sprite2D" type="Sprite2D" parent="block"]
position = Vector2(-4, -35)
scale = Vector2(10, 10)
texture = ExtResource("1_7hotv")

[node name="RayCastRight" type="RayCast2D" parent="block"]
position = Vector2(-4.00006, -3.05176e-05)
rotation = -1.5708
scale = Vector2(2, 2)
collide_with_areas = true

[node name="RayCastLeft" type="RayCast2D" parent="block"]
position = Vector2(4.99994, -3.05176e-05)
rotation = 1.5708
scale = Vector2(2, 2)
collide_with_areas = true

[node name="RayCastUp" type="RayCast2D" parent="block"]
position = Vector2(-6.10352e-05, 2.99997)
rotation = 3.14159
scale = Vector2(2, 2)
target_position = Vector2(3.05176e-05, 34)
collide_with_areas = true

[node name="RayCastDown" type="RayCast2D" parent="block"]
position = Vector2(-6.10352e-05, 2.99997)
scale = Vector2(2, 2)
target_position = Vector2(0, 31)
collide_with_areas = true
